JDK 21: added notes about ZGC